--- a/src/index.sass
+++ b/src/index.sass
@@ -4,6 +4,7 @@ $holy: #fefefe
 
 $root-padding: 1rem
 $inner-padding: 0.5rem
+$card-margin: 0.5rem
 
 $font-family: "Century Gothic", Verdana, Oxygen, Segoe UI, Calibri
 
@@ -13,9 +14,10 @@ $font-family: "Century Gothic", Verdana, Oxygen, Segoe UI, Calibri
     border-width: 1px 2px 3px 1px
     border-color: $dark
     padding: $inner-padding
+    margin-bottom: $card-margin
 =actionButton
     border-style: solid
-    border-width: 1px 2px 3px 1px
+    border-width: 1px 1px 2px 1px
     border-color: $dark
     padding: $inner-padding
     background-color: $holy
