create modal and backdrop

--- a/src/index.sass
+++ b/src/index.sass
@@ -1,27 +1,61 @@
 // global variables
 $dark: #333666
 $holy: #fefefe
+$black: #121212
+$white: #ffffff
 
 $root-padding: 1rem
 $inner-padding: 0.5rem
+$modal-padding: 2.5rem
 $card-margin: 0.5rem
 
 $font-family: "Century Gothic", Verdana, Oxygen, Segoe UI, Calibri
 
 // style mixin
+=absoluteZero
+    top: 0
+    left: 0
+    right: 0
+    bottom: 0
+=createBorder($width: 1px 1px 2px 1px, $color: $dark, $style: solid)
+    border-width: $width
+    border-style: $style
+    border-color: $color
 =itemCard
-    border-style: solid
-    border-width: 1px 2px 3px 1px
-    border-color: $dark
+    +createBorder($width: 1px 2px 3px 1px)
     padding: $inner-padding
     margin-bottom: $card-margin
-=actionButton
-    border-style: solid
-    border-width: 1px 1px 2px 1px
-    border-color: $dark
+=actionButton($margin: 0 0 0 0)
+    +createBorder
     padding: $inner-padding
     background-color: $holy
     cursor: pointer
+    margin: $margin
+=createModal($text-align: center, $modal-padding: $modal-padding)
+    // vertical centering
+    display: flex
+    flex-direction: column
+    align-items: center
+    justify-content: center
+    +absoluteZero
+    position: fixed
+    text-align: $text-align
+    padding: $root-padding
+    min-height: 100vh
+    height: 100vh
+    z-index: 889
+    .modal
+        +createBorder($width: 1px 2px 3px 1px)
+        background-color: $white
+        padding: $modal-padding
+=createBackdrop($background-color: rgba(0,0,0,0.28))
+    +absoluteZero
+    position: fixed
+    z-index: 888
+    background-color: $background-color
+
+    
+
 
 // normalize page stuff
 body
@@ -35,9 +69,15 @@ h1, h2, h3, h4, h5, h6, p, ul, ol
 // global setting
 #root
     padding: $root-padding
-
 // item card style
 .card
     +itemCard
     button
         +actionButton
+// modal on pages
+.modal-container
+    +createModal
+    button
+        +actionButton($margin: 0 0.125em)
+.backdrop
+    +createBackdrop
