--- a/src/index.sass
+++ b/src/index.sass
@@ -11,6 +11,9 @@ h1, h2, h3, h4, h5, h6, p, ul, ol
 a, a:visited, a:hover, a:active, a:focus
     color: inherit
     text-decoration: none
+small
+    font-size: .625rem
+    letter-spacing: .0625rem
 
 // global setting
 #root
