item re- as component, called via list via page

--- a/src/_base.sass
+++ b/src/_base.sass
@@ -25,6 +25,8 @@ $font-family: "Century Gothic", Verdana, Oxygen, Segoe UI, Calibri
     +createBorder($width: 1px 2px 3px 1px)
     padding: $inner-padding
     margin-bottom: $card-margin
+    img
+        max-width: 100%
 =actionButton($margin: 0 0 0 0)
     +createBorder
     padding: $inner-padding
