POST to firebase items success

--- a/src/components/items/NewItemForm.module.sass
+++ b/src/components/items/NewItemForm.module.sass
@@ -4,7 +4,7 @@
 .inputBlock
     width: 100%
     display: inline-block
-    margin: .5rem 0 .25rem
+    margin: .25rem 0
     input
         +standardInput
     textarea
