added badge for favorites

--- a/src/components/layout/MainNavigation.module.sass
+++ b/src/components/layout/MainNavigation.module.sass
@@ -1,6 +1,6 @@
 @import "../../base"
 
-header
+header.header
     +createInlineMenu
     nav
         ul
@@ -11,3 +11,14 @@ header
                     display: block
                     padding: .125rem .5rem
                     font-size: .8rem
+    .badge
+        display: inline-block
+        height: 1rem
+        line-height: 1rem
+        width: auto
+        color: $white
+        background-color: $guava
+        padding: 0 .25rem
+        font-weight: 600
+        margin-left: .25rem
+    
