tidy up title and menu

--- a/src/components/layout/Layout.module.sass
+++ b/src/components/layout/Layout.module.sass
@@ -1,5 +1,8 @@
-.main
+@import "../../base"
+
+main.main
     display: flex
     flex-direction: column
     justify-content: center
     align-items: center
+    padding: $inner-padding
