--- a/src/_base.sass
+++ b/src/_base.sass
@@ -86,6 +86,7 @@ $browsers: '', '-moz-', '-webkit-', '-ms-'
         display: inline-block
     nav ul, ul
         padding: 0
+        display: inline-block
 
 // form items
 =standardInput($height: 2.5rem, $padding: 0 .5rem, $display: block, $width: 100%, $font-size: $input-font-size)
