--- a/src/components/layout/MainNavigation.module.sass
+++ b/src/components/layout/MainNavigation.module.sass
@@ -2,6 +2,7 @@
 
 header.header
     +createInlineMenu
+    text-align: center
     nav
         ul
             li
@@ -11,14 +12,18 @@ header.header
                     display: block
                     padding: .125rem .5rem
                     font-size: .8rem
-    .badge
-        display: inline-block
-        height: 1rem
-        line-height: 1rem
-        width: auto
-        color: $white
-        background-color: $guava
-        padding: 0 .25rem
-        font-weight: 600
-        margin-left: .25rem
+.badge
+    display: inline-block
+    height: 1rem
+    line-height: 1rem
+    width: auto
+    color: $white
+    background-color: $guava
+    padding: 0 .25rem
+    font-weight: 600
+    margin-left: .25rem
+.identity
+    display: inline-block
+    font-size: 2.5rem
+    font-weight: 600
     
